[build-system]

requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gnssrefl"
version = "4.0.1"
description = "A GNSS reflectometry software package "
readme = "README.md"
maintainers = [
    { name = "Kristine Larson", email = "kristinem.larson@gmail.com" },
]
requires-python = ">=3.10,<4"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
    "numpy>=2.0",
    "scipy",
    "matplotlib",
    "requests",
    "astropy",
]

[tool.setuptools.packages.find]
include = ["gnssrefl*"]

[project.urls]
"Documentation" = "https://gnssrefl.readthedocs.io/en/latest/"
"Source" = "https://github.com/kristinemlarson/gnssrefl/"
"Issue Tracker" = "https://github.com/kristinemlarson/gnssrefl/issues/"

[project.scripts]
gnssir = "gnssrefl.gnssir_cl:main"
daily_avg = "gnssrefl.daily_avg_cl:main"
quickLook = "gnssrefl.quickLook_cl:main"
gnssir_input = "gnssrefl.gnssir_input:main"
